syntax = "proto3";

package pb;

import "crag.proto";
import "google/protobuf/field_mask.proto";
import "line.proto";


option go_package = "github.com/greghart/climbing-app/internal/pb";

message ReadCragOptions {
  repeated string includes = 1;
}

message GetCragRequest {
  int64 id = 1;
  ReadCragOptions opts = 2;
}

message GetCragResponse {
  Crag crag = 1;
}

message ListCragsRequest {
  ReadCragOptions opts = 2;
}

message ListCragsResponse {
  repeated Crag crags = 1;
}

message UpdateCragRequest {
  message UpdateTrail {
    repeated Line lines = 1;
  }
  int64 id = 1;
  google.protobuf.FieldMask field_mask = 2;
  string name = 3;
  string description = 4;
  UpdateTrail trail = 5;

}

service ClimbService {
  rpc GetCrag(GetCragRequest) returns (GetCragResponse);
  rpc ListCrags(ListCragsRequest) returns (ListCragsResponse);
  rpc UpdateCrag(UpdateCragRequest) returns (ListCragsResponse);
}
