syntax = "proto3";

package pb;

import "coordinate.proto";

option go_package = "github.com/greghart/climbing-app/internal/pb";

message PolygonCoordinate {
  int64 id = 1;
  int64 order = 2;
  Coordinate coordinates = 3;
}

